# RTX

./: CMakeLists.txt  Color.h  Image.cpp  Image.h  Ray.cpp  Sphere.cpp  compile_commands.json  main.cpp
src/: Box.cpp  Box.h  Color.cpp  Figure.cpp  Figure.h  Ray.h  Sphere.h  Tetra.cpp  Tetra.h  Vec3.cpp  Vec3.h  main.cpp
